--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   url_launcher: ^6.1.11
   intl: ^0.18.1
   package_info_plus: ^4.1.0
+  share_plus: ^7.2.1
   # flutter_html: ^2.0.0
 
 dev_dependencies:
