--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pemint_admin_app">
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
    <application
         android:label="pemint_admin_app"
         android:name="${applicationName}"
