--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,9 @@ dependencies:
   intl: ^0.18.1
   package_info_plus: ^4.1.0
   share_plus: ^7.2.1
-  # flutter_html: ^2.0.0
+  permission_handler: ^11.0.0
+  contacts_service: ^0.6.3
+
 
 dev_dependencies:
   flutter_test:
