--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   permission_handler: ^11.0.0
   contacts_service: ^0.6.3
   flutter_slidable: ^2.0.0
+  file_picker: ^6.1.1
 
 
 dev_dependencies:
