--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   contacts_service: ^0.6.3
   flutter_slidable: ^2.0.0
   file_picker: ^6.1.1
+  http_parser: ^4.0.0
 
 
 dev_dependencies:
